Add Lifecycle image support for `kp import`
- Pulled out shared functionality between `kp lifecycle update` amd `kp import` into `pkg/lifecycle`

Issue: https://github.com/vmware-tanzu/kpack-cli/issues/143

--- a/pkg/commands/import/testdata/updated-deps.yaml
+++ b/pkg/commands/import/testdata/updated-deps.yaml
@@ -2,6 +2,8 @@ apiVersion: kp.kpack.io/v1alpha3
 kind: DependencyDescriptor
 defaultClusterBuilder: clusterbuilder-name
 defaultClusterStack: stack-name
+lifecycle:
+  image: some-registry.io/repo/another-lifecycle-image
 clusterStores:
 - name: store-name
   sources:
